messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app-deployment
  labels:
    app: django-messaging-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-app
  template:
    metadata:
      labels:
        app: django-messaging-app
  spec:
    containers:
      - name: django-messaging-app-container
        image: olaish/messaging_app:1.0
        ports:
          - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-app-service
spec:
  selector:
    app: django-messaging-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
