messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-messaging-app-ingress
  annotations:
    path: /
spec:
  rules:
    - host: www.message-app.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: django-messaging-app-service
                port:
                  number: 80
